--- a/docs/azure/TOC.yml
+++ b/docs/azure/TOC.yml
@@ -1,16 +1,57 @@
 - name: Azure per sviluppatori .NET
   href: index.yml
+- name: Introduzione ad Azure con .NET
+  expanded: true
   items:
     - name: Introduzione ad Azure e .NET
       href: intro.md
-    - name: Eseguire la migrazione ad Azure
-      expanded: true
+    - name: Strumenti per sviluppatori
+      href: tools.md
+    - name: Authentication
+      href: authentication.md
+    - name: Registrazione
+      href: logging.md
+    - name: Esempio SDK
+      href: /samples/dotnet/samples/azure-identity-resource-management-storage/
+- name: Eseguire la migrazione ad Azure
+  items:
+    - name: Scegliere l'opzione di hosting di Azure più adatta
+      href: ./migration/choose.md
+    - name: Eseguire la migrazione di un'app Web o un servizio .NET nel servizio app di Azure
+      href: ./migration/app-service.md
+    - name: Eseguire la migrazione di un'app ASP.NET a una VM di Azure
+      href: ./migration/vm.md
+    - name: Eseguire la migrazione di un database SQL Server ad Azure
+      href: ./migration/sql.md
+- name: Codice di esempio
+  items:
+    - name: App Web e serverless
+      href: /samples/browse/?languages=csharp%2Caspx-csharp%2Cfsharp%2Cvb&products=azure-functions%2Cazure-app-service%2Cazure-logic-apps
+    - name: Database
+      href: /samples/browse/?languages=csharp%2Caspx-csharp%2Cfsharp%2Cvb&products=azure-cosmos-db%2Cazure-sql-database
+    - name: Archiviazione
       items:
-        - name: Scegliere un'opzione di hosting di Azure
-          href: ./migration/choose.md
-        - name: Eseguire la migrazione di un'app Web o un servizio .NET nel servizio app di Azure
-          href: ./migration/app-service.md
-        - name: Eseguire la migrazione di un'app ASP.NET a una VM di Azure
-          href: ./migration/vm.md
-        - name: Eseguire la migrazione di un database SQL Server ad Azure
-          href: ./migration/sql.md
+        - name: Archiviazione di Azure
+          href: /samples/browse/?languages=csharp%2Caspx-csharp%2Cfsharp%2Cvb&products=azure-storage
+        - name: Cache Redis
+          href: /samples/browse/?languages=csharp%2Caspx-csharp%2Cfsharp%2Cvb&products=azure-redis-cache
+    - name: Identità e sicurezza
+      href: /samples/browse/?languages=csharp%2Caspx-csharp%2Cfsharp%2Cvb&products=azure-active-directory%2Cazure-key-vault
+    - name: IoT
+      href: /samples/browse/?languages=csharp%2Caspx-csharp%2Cfsharp%2Cvb&products=azure-iot-hub%2Cazure-iot-edge%2Cazure-iot-central
+    - name: Data science
+      items:
+        - name: Servizio Machine Learning
+          href: /samples/browse/?languages=csharp%2Caspx-csharp%2Cfsharp%2Cvb&products=azure-machine-learning-service
+        - name: Databricks
+          href: /samples/browse/?languages=csharp%2Caspx-csharp%2Cfsharp%2Cvb&products=azure-databricks
+        - name: HDInsight
+          href: /samples/browse/?languages=csharp%2Caspx-csharp%2Cfsharp%2Cvb&products=azure-hdinsight
+    - name: Intelligenza artificiale con servizi cognitivi
+      href: /samples/browse/?languages=csharp%2Caspx-csharp%2Cfsharp%2Cvb&products=azure-cognitive-services
+    - name: Cerca
+      href: /samples/browse/?languages=csharp%2Caspx-csharp%2Cfsharp%2Cvb&products=azure-search
+    - name: Tutti gli esempi
+      href: /samples/browse/?languages=csharp%2Caspx-csharp%2Cfsharp%2Cvb
+- name: API (riferimento)
+  href: /dotnet/api/overview/azure/?view=azure-dotnet
